--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^0.3.4",
+    "@react-google-maps/api": "^2.13.1",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.37",
     "bootstrap": "^5.2.2",
+    "chart.js": "^3.9.1",
+    "chartjs-adapter-moment": "^1.0.0",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +58,6 @@
     "postcss": "^8.4.16",
     "react-icons": "^4.4.0",
     "swiper": "^8.3.2",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.6"
   }
 }
