--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/chart.js": "^2.9.37",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.0",
