--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^0.3.4",
     "@react-google-maps/api": "^2.13.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,12 +22,15 @@
     "chartjs-adapter-moment": "^1.0.0",
     "currency-formatter": "^1.5.9",
     "formik": "^2.2.9",
+    "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
