--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-google-login": "^5.2.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
